implement admin/v1
